[WEB-297] Fixing spacings, adding hover animation to CodePreview nav links

--- a/styles/components/_code-preview.scss
+++ b/styles/components/_code-preview.scss
@@ -31,9 +31,14 @@
         margin-right: 6px;
         cursor: pointer;
         white-space: nowrap;
+        transition: $transition-default;
 
         &:last-child {
           margin-right: 0;
+        }
+
+        &:hover {
+          color: #fff;
         }
 
         &.is-active {
